Bug 1950: Raise memory and permgen limits for featurs-test
Change-Id: I7e72e605eac4029835cbc8e64e22d0ecedc1dacc
Signed-off-by: Ed Warnicke <eaw@cisco.com>